sorted/tests/06-pattern-path.stderr
error: Error::Fmt should sort before Error::Io
  --> tests/06-pattern-path.rs:33:20
   |
33 |             Error::Fmt(e) => write!(f, "{}", e),
   |                    ^^^

error[E0046]: not all trait items implemented, missing: `fmt`
  --> tests/06-pattern-path.rs:27:1
   |
27 | impl Display for Error {
   | ^^^^^^^^^^^^^^^^^^^^^^ missing `fmt` in implementation
   |
   = help: implement the missing item: `fn fmt(&self, _: &mut Formatter<'_>) -> Result<(), std::fmt::Error> { todo!() }`
